src/compile_warnings.txt
./stage/ast/ast_destroy/ast_destroy.c: In function ‘ast_destroy’:
./stage/ast/ast_destroy/ast_destroy.c:3:25: warning: unused parameter ‘ast’ [-Wunused-parameter]
    3 | void ast_destroy(ast_t* ast)
      |                  ~~~~~~~^~~
./stage/ast/ast_json/ast_json.c:3:6: error: conflicting types for ‘ast_json’; have ‘void(ast_t *)’
    3 | void ast_json(ast_t* ast)
      |      ^~~~~~~~
In file included from ./stage/ast/ast_json/ast_json.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/stage/ast/ast_json/ast_json.h:7:7: note: previous declaration of ‘ast_json’ with type ‘char *(ast_t *)’
    7 | char* ast_json(ast_t* ast);
      |       ^~~~~~~~
./stage/ast/ast_json/ast_json.c: In function ‘ast_json’:
./stage/ast/ast_json/ast_json.c:3:22: warning: unused parameter ‘ast’ [-Wunused-parameter]
    3 | void ast_json(ast_t* ast)
      |               ~~~~~~~^~~
./stage/ast/ast_log/ast_log.c: In function ‘ast_log’:
./stage/ast/ast_log/ast_log.c:3:21: warning: unused parameter ‘ast’ [-Wunused-parameter]
    3 | void ast_log(ast_t* ast)
      |              ~~~~~~~^~~
